[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "log_management"
authors = [
    {name = "Bart Kuppen", email = "bjekuppen@gmail.com"},
]
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["log_management*"] 